Fix: Java 17 compliance